# exspcpp

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  exsp-config.cmake.in  exsp.pc.in  flake.nix
include/exsp/: exec.hpp  path.hpp  spawn.hpp
src/: exec.cpp  path.cpp  spawn.cpp
test/: exec_test.cpp  path_test.cpp  spawn_test.cpp
